# pyramid_tm

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTORS.txt  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-linux.yml  ci-tests.yml
docs/: .gitignore  Makefile  api.rst  conf.py  glossary.rst  index.rst
pyramid_tm/: __init__.py  compat.py  events.py  integrationtests.py  reify.py  sample.py  tests.py
src/pyramid_tm/: __init__.py  compat.py
tests/: __init__.py  test_it.py
