[build-system]
requires = ["setuptools >= 41", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''

# This next section only exists for people that have their editors
# automatically call isort, black already sorts entries on its own when run.
[tool.isort]
profile = "black"
line_length = 79
force_sort_within_sections = true
sections = "FUTURE,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "pyramid_tm"
